[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cron-job-org-mcp"
version = "0.1.0"
description = "MCP server for cron-job.org — manage cron jobs from Claude Code / any MCP client"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Darek Jasion"}]
keywords = ["mcp", "cron", "cron-job.org", "scheduler", "anthropic", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.5",
]

[project.scripts]
cron-job-org-mcp = "cron_job_org_mcp.server:main"

[project.urls]
Homepage = "https://github.com/come2daddy13/cron-job-org-mcp"
Repository = "https://github.com/come2daddy13/cron-job-org-mcp"
Issues = "https://github.com/come2daddy13/cron-job-org-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"
